--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
         "video-extract",
         "pyrogram"
     ],
-    "repository": "https://github.com/Sursa2929/txt_leech",
+    "repository": "https://github.com/Ashrafmdmatin41/txt_leech",
     "success_url": "https://t.me/thebishnoi29_bot",
     "stack": "container",
     "env": {
